--- a/tut-list.html
+++ b/tut-list.html
@@ -9,220 +9,221 @@
 </head>
 
 <body>
+
   <h3>Episodio 001</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/qkyqrw5s2e0fwe1/Episode_001.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/8sBgqzC1POw" type="video/ogg">
   </video>
 
   <h3>Episodio 003</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/3yc7i5c1hs7ctgb/Episode_003.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/tegxh3BeCtI" type="video/ogg">
   </video>
 
   <h3>Episodio 004</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/ery331my9nrwb7n/Episode_004.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/4rz8MIT-Ci0" type="video/ogg">
   </video>
 
   <h3>Episodio 005</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/86eoq252ki1vekc/Episode_005.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/qwr3eOwhUwY" type="video/ogg">
   </video>
 
   <h3>Episodio 006</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/qswfmofah3nyntw/Episode_006.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/bkEfUmPWPKE" type="video/ogg">
   </video>
 
   <h3>Episodio 008</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/uet8t0uq8ivaymq/Episode_008.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/rLDOkcv2dGA" type="video/ogg">
   </video>
 
   <h3>Episodio 010</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/qjowgjtm88ur6ys/Episode_010.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/P3OcPmgMyd8" type="video/ogg">
   </video>
 
   <h3>Episodio 013</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/lckfesxutu2ijl7/Episode_013.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/Abb7OaNsaHw" type="video/ogg">
   </video>
 
   <h3>Episodio 017</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/7jycdkh3fcdfc47/Episode_017.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/TIYKTknTRK8" type="video/ogg">
   </video>
 
   <h3>Episodio 018</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/vjykh2nfc1k0b83/Episode_018.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/y6eoFAYcjS4" type="video/ogg">
   </video>
 
   <h3>Episodio 020</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/ywkuysbf8pex8ul/Episode_020.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/4UwpehNAnFM" type="video/ogg">
   </video>
 
   <h3>Episodio 022</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/ivojod1agfv3hwc/Episode_022.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/XhRmM8SJAUs" type="video/ogg">
   </video>
 
   <h3>Episodio 023</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/5n41356ccganx62/Episode_023.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/FNJdXytEcWw" type="video/ogg">
   </video>
 
   <h3>Episodio 026</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/fk3im1ogvdpneye/Episode_026.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/uL0hF_nj0pU" type="video/ogg">
   </video>
 
   <h3>Episodio 028</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/ewquykesx4g06q4/Episode_028.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/XG_HZmU8IOk" type="video/ogg">
   </video>
 
   <h3>Episodio 030</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/jyku9tobn4ochtg/Episode_030.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/jyN49E1L0Og" type="video/ogg">
   </video>
 
   <h3>Episodio 038</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/lat9io9fjy36ghz/Episode_038.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/eRN_6u6bILU" type="video/ogg">
   </video>
 
   <h3>Episodio 039</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/9qp75i7efvsh96d/Episode_039.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/T7DABGTtYlw" type="video/ogg">
   </video>
 
   <h3>Episodio 041</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/mhnrsnsg6lpf3rn/Episode_041.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/dkcSUTA-qwE" type="video/ogg">
   </video>
 
   <h3>Episodio 042</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/hr7h8m3jn27yyr6/Episode_042.ogg?raw=1" type="video/ogg">
+    <source src="https://youtu.be/clfhMmMd6kY" type="video/ogg">
   </video>
 
   <h3>Episodio 046</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/qcvgjx8wsow7hav/Episode_046.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/HWGmYTf4IEo" type="video/ogg">
   </video>
 
   <h3>Episodio 047</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/4szdxo1die2834i/Episode_047.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/kMJOQjm0oiU" type="video/ogg">
   </video>
 
   <h3>Episodio 049</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/7onszxgrle9jzz0/Episode_049.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/at_rAyDldtE" type="video/ogg">
   </video>
 
   <h3>Episodio 051</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/2qudg9m13ayjtnb/Episode_051.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/K7jEj4renfA" type="video/ogg">
   </video>
 
   <h3>Episodio 052</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/nf7nbbx5rc4k04w/Episode_052.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/39xe_-sn5jc" type="video/ogg">
   </video>
 
   <h3>Episodio 057</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/xxi69orr05o8tbz/Episode_057.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/T1tt9kmwG7o" type="video/ogg">
   </video>
 
   <h3>Episodio 061</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/y0va8qwiqldef66/Episode_061.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/HtxFpK9wreo" type="video/ogg">
   </video>
 
   <h3>Episodio 065</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/p5nuqg4xp4oazlw/Episode_065.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/k4mugmfF610" type="video/ogg">
   </video>
 
   <h3>Episodio 067</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/9pbtd9k7m7mhjx9/Episode_067.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/0YJL9tLGrqA" type="video/ogg">
   </video>
 
   <h3>Episodio 069</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/3atbb6f8lyp2uhp/Episode_069.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/QFSMpnIUugs" type="video/ogg">
   </video>
 
   <h3>Episodio 071</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/wzd86iqdkec47ku/Episode_071.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/WamTEsDW7G4" type="video/ogg">
   </video>
 
   <h3>Episodio 075</h3>
   <video width="320" height="240" controls>
-  <source src="https://www.dropbox.com/s/2zxs9qw4vznu1d1/Episode_075.ogg?dl=0" type="video/ogg">
+    <source src="https://youtu.be/WtW8pKOgm9c" type="video/ogg">
   </video>
 
   <h3>Episodio 076</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_076.ogg" type="video/ogg">
+    <source src="https://youtu.be/62wvSN_SeRY" type="video/ogg">
   </video>
 
   <h3>Episodio 080</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_080.ogg" type="video/ogg">
+    <source src="https://youtu.be/UcrCmiKR8ik" type="video/ogg">
   </video>
 
   <h3>Episodio 081</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_081.ogg" type="video/ogg">
+    <source src="https://youtu.be/_hh4d1o7Ai8" type="video/ogg">
   </video>
 
   <h3>Episodio 085</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_085.ogg" type="video/ogg">
+    <source src="https://youtu.be/RmtOrncWZCY" type="video/ogg">
   </video>
 
   <h3>Episodio 088</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_088.ogg" type="video/ogg">
+    <source src="https://youtu.be/VgllJRJvoTA" type="video/ogg">
   </video>
 
   <h3>Episodio 089</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_089.ogg" type="video/ogg">
+    <source src="https://youtu.be/Ba92LphJ8O0" type="video/ogg">
   </video>
 
   <h3>Episodio 096</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_096.ogg" type="video/ogg">
+    <source src="https://youtu.be/GNyAv33K7PM" type="video/ogg">
   </video>
 
   <h3>Episodio 097</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_097.ogg" type="video/ogg">
+    <source src="https://youtu.be/C-MEGTx8K30" type="video/ogg">
   </video>
 
   <h3>Episodio 101</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_101.ogg" type="video/ogg">
+    <source src="https://youtu.be/6I6n_J6l5a4" type="video/ogg">
   </video>
 
 
   <h3>Episodio 103</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_103.ogg" type="video/ogg">
+    <source src="https://youtu.be/buyVh1Tb5To" type="video/ogg">
   </video>
 
   <h3>Episodio 104</h3>
   <video width="320" height="240" controls>
-  <source src="assets/videos/Episode_104.ogg" type="video/ogg">
+    <source src="https://youtu.be/I8YAltx4YmY" type="video/ogg">
   </video>
 
 
